/*
 * $Id: ChangeLog,v 1.13 2002/09/19 19:54:37 what32 Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2002-09-20 07:53 UCT+1000 AJ Wos <andrwos@aust1.net>
   * ErrorSys.Prg
     * Corrected error logging
     * Improved feedback in debug window  

2002-09-19 16:47 UCT -0300 Augusto Infante <systems@quesoro.com>
   * _WinSys.c
     + GetMessageFont() to retrieve messagebox font to be used 
       in controls instead of system font

2002-09-19 22:18 UCT+1000 AJ Wos <andrwos@aust1.net>
   * WinTabs.Prg
     * changed _TempPageProc() to STATIC FUNCTION
     * Passed the code through the PRG formatter 

2002-09-19 22:10 UCT+1000 AJ Wos <andrwos@aust1.net>
   * ErrorSys.Prg  
     * Removed obsolete PP directives
     - Removed unnecessary WinSetCursor() calls
     * Passed the code through the PRG formatter
       ( please do not create confusion by modifying files
         without adding value to the source )          

2002-09-19 16:15 UCT +0530 Pritpal Bedi <info@vouchcac.com>
   * ErrorSys.prg
     + Reformatted ( and all other files will be reformatted in the same manner )
     * Changed calls to SetCursor() function with WinSetCursor().
     
   * WinTabs.prg
     + Reformatted
   
2002-09-18 05:54 UCT -0300 Augusto Infante <systems@quesoro.com>
   * _WinWnd.c
     + AllowSetForegroundWindow()
     + LockSetForegroundWindow()

   * _WinSys.c
     + GetCurrentProcessId()
     + GetCurrentProcess()
     + GetCurrentThreadId()

2002-09-18 07:34 UCT+1000 AJ Wos <andrwos@aust1.net>
   * WinCore.Prg 
     + GLOBAL variable lPrevInstance, which indicates if there is
       an instance of the application already running
       Usage eample: 
       FUNCTION Main()       
       IF lPrevInstance()
          MessageBox(, "Application already running","Attention")
          QUIT
       ENDIF  