@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.13 2002/09/19 19:54:37 what32 Exp $
+ * $Id: ChangeLog,v 1.14 2002/09/19 22:21:19 andy_wos Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2002-09-19 21:35 UCT -0300 Augusto Infante <systems@quesoro.com>
+   * WhatUtil.Prg
+     + GetMessageFont()
+   * _WinSys.c
+     + SystemParametersInfo()
+     - GetMessageFont()
+
 2002-09-20 07:53 UCT+1000 AJ Wos <andrwos@aust1.net>
    * ErrorSys.Prg
      * Corrected error logging
